cluster/jira/jira-telegram-bot/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jira-telegram-bot
  name: jira-telegram-bot
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
        - path: /jira-telegram-bot//
          pathType: Prefix
          backend:
            service:
              name: jira-telegram-bot
              port:
                number: 8080
